--- a/tarea2.css
+++ b/tarea2.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+    outline: 0;
+}
+body{
+    width: 100%;
+    overflow: hidden;
+}
 .top{
     width: 60vw;
     color: rgb(88, 88, 168);
@@ -16,4 +25,12 @@ h1:hover{
 }
 .texto{
     color: black;
+}
+.fondoxd{
+    z-index: -10;
+    position: absolute;
+    display: flex;
+    height: 100vh;
+    width: auto;
+
 }
