--- a/tarea2.css
+++ b/tarea2.css
@@ -6,16 +6,45 @@
 body{
     width: 100%;
     overflow: hidden;
-}
-.top{
-    width: 60vw;
-    color: rgb(88, 88, 168);
     display: flex;
-    margin: 5px;
-    border: 5px;
-    position: absolute 60vw;
+}
+.container{
+    margin: auto;
+    width: 65%;
+    background-color: aliceblue;
+    height: 100vh;
 
 }
+.top{
+    color: rgb(88, 88, 168);
+    display: flex;
+    background-color: #2aa3cc;
+    height: 50px;
+}
+.top a{
+    width: 20%;
+    margin: auto 0 auto 10px; 
+}
+.top .imgs{
+    display: flex;
+    width: 20%;
+    margin: auto 0;
+}
+.top .imgs a{
+    display: flex;
+    height:50px;
+    width: 50px;
+}
+.top .imgs a:hover{
+    background-color: #2282a3;
+}
+.top .imgs a img{
+    height: 30px;
+    width: auto;
+    margin: auto;
+}
+
+
 h1{
     margin: 30px;
     border: 30px;
