--- a/tarea2.css
+++ b/tarea2.css
@@ -8,12 +8,18 @@ body{
     overflow: hidden;
     display: flex;
 }
+.fondoxd{
+    z-index: -10;
+    position: absolute;
+    display: flex;
+    height: 100vh;
+    width: auto;
+}
 .container{
     margin: auto;
     width: 65%;
     background-color: aliceblue;
     height: 100vh;
-
 }
 .top{
     color: rgb(88, 88, 168);
@@ -43,23 +49,68 @@ body{
     width: auto;
     margin: auto;
 }
-
-
-h1{
-    margin: 30px;
-    border: 30px;
+.spacio{
+    display: block;
+    width: 30%;
 }
-h1:hover{
-    color: red;
-}
-.texto{
-    color: black;
-}
-.fondoxd{
-    z-index: -10;
-    position: absolute;
+.form{
     display: flex;
-    height: 100vh;
-    width: auto;
-
+    width: 30%;
 }
+.interruptor{
+    width: 20%;
+    display: flex;
+}
+.buscador{
+    width: 60%;
+    display: block;
+}
+.lenguaje{
+    width: 20%;
+    display: block;
+}
+.item{
+    margin: auto;
+    display: flex;  
+}
+.interruptor i{
+margin: auto 5px;
+}
+/* toggle-pill */
+.toggle-pill input[type="checkbox"] {
+    display: none;
+}
+.toggle-pill input[type="checkbox"]+label {
+    display: block;
+    position: relative;
+    width: 2em;
+    height: 1.2em;
+    border-radius: 1em;
+    background: #fffdfd;
+    box-shadow: inset 0px 0px 3px 1px rgba(92, 91, 92, 0.3);
+    cursor: pointer;
+    -webkit-transition: background 0.1s ease-in-out;
+    transition: background 0.1s ease-in-out;
+}
+.toggle-pill input[type="checkbox"]+label:before {
+    content: "";
+    display: block;
+    width: 0.8em;
+    height: 0.8em;
+    border-radius: 1em;
+    background: #50565a;
+    box-shadow: 2px 0px 5px rgba(255, 255, 255, 0.2);
+    position: absolute;
+    left: 0.2em;
+    top: 0.2em;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+.toggle-pill input[type="checkbox"]:checked+label {
+    background: black;
+}
+.toggle-pill input[type="checkbox"]:checked+label:before {
+    box-shadow: -2px 0px 5px rgb(3, 3, 3);
+    left: 1.0em;
+}
+/* toggle-pill end */
