--- a/tarea2.css
+++ b/tarea2.css
@@ -63,11 +63,11 @@ body{
 }
 .buscador{
     width: 60%;
-    display: block;
+    display: flex;
 }
 .lenguaje{
     width: 20%;
-    display: block;
+    display: flex;
 }
 .item{
     margin: auto;
@@ -114,3 +114,27 @@ margin: auto 5px;
     left: 1.0em;
 }
 /* toggle-pill end */
+.caja-buscador{
+    margin: auto;
+    background-color: #2282a3;
+    padding: 5px;
+}
+.caja-buscador input{
+    background:transparent;
+    outline: none;
+    border: none;   
+}
+.caja-buscador input::placeholder{
+    color: white;
+}
+.lenguaje select{
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background:transparent;
+    color: white;
+    
+}
+.lenguaje select:hover{
+ background-color: #2282a3;
+}
