--- a/tarea2.css
+++ b/tarea2.css
@@ -127,14 +127,23 @@ margin: auto 5px;
 .caja-buscador input::placeholder{
     color: white;
 }
-.lenguaje select{
+.lenguaje div{
     margin: auto;
     width: 100%;
     height: 100%;
+    padding: 0 10px;
     background:transparent;
     color: white;
-    
+    border: none;
 }
-.lenguaje select:hover{
+.lenguaje select{
+    margin: auto;
+    width: 80%;
+    height: 100%;
+    background:transparent;
+    color: white;
+    border: none;
+}
+.lenguaje div:hover {
  background-color: #2282a3;
 }
