--- a/kirito kun/indes.css
+++ b/kirito kun/indes.css
@@ -1,14 +1,121 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%27');
+
+body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     display: flex;
+    background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F002%2F282%2F910%2Foriginal%2Felegant-white-background-free-vector.jpg&f=1&nofb=1&ipt=2e6b932b3a3c64424bf7abeef66182a441892c3385f04214c5ef0459d0cad3e1&ipo=images);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: "Raleway", "sans-serief";
 }
-.container{
-    width: 75vw;
-    height: auto;
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    position: absolute;
+}
+
+img {
     margin: auto;
+    margin-bottom: 0;
+    width: 40vw;
+    height: auto;
 }
-img{
-    background-color: brown;
+
+.caja-iz {
+    display: block;
+    width: 50vw;
+}
+
+.negrita {
+    height: 10vh;
+    display: flex;
+    padding-right: 30%;
+
+}
+
+.barra {
+    display: block;
+    background-color: black;
+    content: "";
+    width: 135px;
+    height: 32px;
+    margin: auto;
+    margin-left: 200px;
+    margin-bottom: 5px;
+}
+
+.parrafo {
+    border-left: solid #b8e0f7 50px;
+    padding-right: 30%;
+    height: 15vh;
+    z-index: 5;
+
+}
+
+.parrafo p {
+    font-size: 24px;
+    padding-left: 25px;
+
+}
+.titulo{
+    height: 25vh;
+    display: flex;
+    padding-right: 30%;
+    
+}
+.titulo h2{
+    font-size: 70px;
+    margin: auto;
+    text-align: center;
+}
+.titulo h2 strong{
+    font-weight: bolder;
+}
+.parrafito{
+    height: 10vh;
+    text-align: center;
+    font-size: 20px;
+    padding-right: 30%;
+}
+.parrafito p{
+    padding: 0 30px;
+}
+.azul{
+    height: 5vh;
+    padding-right: 30%;
+
+}
+.azul .barra{
+    background-color: #b8e0f7;
+}
+.bolas{
+    padding-right: 30%;
+    display: flex;
+    padding-top: 30px;
+
+}
+.bola{
+    display: block;
+    width: 70px;
+    height: 70px;
+    outline: solid 20px black;
+    padding: 5px;
+    border-radius: 50%;
+    margin: 0 100px;
+}
+.bola.neg{
+    outline: solid 20px black
+
+}
+.bola.azu{
+    outline: solid 20px #b8e0f7;
+}
+.boli{
+    margin: auto;
+    display: flex;
+
 }
