--- a/kirito kun/indes.css
+++ b/kirito kun/indes.css
@@ -152,7 +152,7 @@ img {
     padding: 0 50px;
     font-size: 20px;
 }
-.azu{
+.azuu{
     height: 10vh;
     display: flex;
     padding-left: 30%;
