--- a/kirito kun/indes.css
+++ b/kirito kun/indes.css
@@ -179,10 +179,11 @@ img {
     margin-bottom: 60px;
 }
 .imag{
-    width: 10%;
-    height: 10vh;
+    width: 100%;
+    height: 25vh;
     display: block;
-
-  
+    background: url(https://nacionanime.com/wp-content/uploads/2021/09/Kirito-y-Asuna-5-razones-por-las-que-son-la.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
