--- a/kirito kun/indes.css
+++ b/kirito kun/indes.css
@@ -16,6 +16,7 @@ body {
     height: 100vh;
     display: flex;
     position: absolute;
+    z-index: 5;
 }
 
 img {
@@ -116,9 +117,11 @@ img {
     border-radius: 50%;
     margin: 0 100px;
 }
+
 .bola.neg {
     outline: solid 20px black
 }
+
 .bola.azu {
     outline: solid 20px #b8e0f7;
 }
@@ -128,38 +131,45 @@ img {
     display: flex;
 
 }
-.caja-der{
+
+.caja-der {
     display: block;
     width: 50vw;
 }
-.tituloder{
+
+.tituloder {
     height: 20vh;
     display: flex;
     padding-left: 30%;
 }
-.tituloder h2{
+
+.tituloder h2 {
     font-size: 70px;
     margin: auto;
     text-align: center;
 }
-.parra{
+
+.parra {
     padding-left: 30%;
     height: 14vh;
     z-index: 5;
     text-align: center;
 }
-.parra p{
+
+.parra p {
     padding: 0 50px;
     font-size: 20px;
 }
-.azuu{
+
+.azuu {
     height: 10vh;
     display: flex;
     padding-left: 30%;
 }
-.barrazu{
+
+.barrazu {
     display: block;
-    background-color: #b8e0f7 ;
+    background-color: #b8e0f7;
     content: "";
     width: 140px;
     height: 32px;
@@ -167,23 +177,33 @@ img {
     margin-right: 270px;
     margin-bottom: 50px;
 }
-.barrader{
+
+.barrader {
     display: flex;
     padding-right: 30%;
-    background-color: black ;
+    background-color: black;
     content: "";
     width: 50vw;
     height: 32px;
     margin: auto;
     margin-right: 270px;
-    margin-bottom: 60px;
+    margin-bottom: 10px;
 }
-.imag{
+
+.imag {
     width: 100%;
     height: 25vh;
     display: block;
-    background: url(https://nacionanime.com/wp-content/uploads/2021/09/Kirito-y-Asuna-5-razones-por-las-que-son-la.jpg);
+    background: url(https://e0.pxfuel.com/wallpapers/232/207/desktop-wallpaper-kirito-sword-art-online-cool-kirito.jpg);
     background-size: cover;
     background-position: center;
 }
 
+.tiranegra {
+    position: absolute;
+    width: 100vw;
+    height: 15vh;
+    background-color: black;
+    bottom: 20px;
+
+}
